# llvm-or1k

./: .gitignore  CMakeLists.txt  configure
autoconf/: configure.ac
include/llvm/ADT/: Triple.h
include/llvm/IR/: Intrinsics.td  IntrinsicsOR1K.td
include/llvm/MC/: MCExpr.h
include/llvm/Object/: ELFObjectFile.h  RelocVisitor.h
include/llvm/Support/: ELF.h
lib/MC/: MCExpr.cpp
lib/Object/: ELF.cpp
lib/Support/: Triple.cpp
projects/: CMakeLists.txt
projects/sample/: configure
projects/sample/autoconf/: configure.ac
test/CodeGen/OR1K/: addc.ll  brcc.ll  count_bits.ll  dynamic_stackalloc.ll  extload.ll  fcmp.ll  i64.ll  intrinsics.ll  retimm.ll  selectcc.ll  sextinreg.ll  stackrealign.ll  vararg.ll
test/MC/OR1K/: or1k_alu.s  or1k_alu_disass.s  or1k_bf.s  or1k_ext.s  or1k_ext_disass.s  or1k_fbit.s  or1k_fbit_disass.s  or1k_flags.s  or1k_flags_disass.s  or1k_mac.s  or1k_mac_disass.s  or1k_os.s  or1k_os_disass.s  or1k_spr.s  or1k_spr_disass.s  or1k_sync.s  or1k_sync_disass.s
